--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/effects": "^14.3.2",
     "@ngrx/store": "^14.3.2",
     "chart.js": "^3.9.1",
     "ng2-charts": "^4.0.1",
